--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,10 @@
 services:
   postgres:
     image: 'postgres:latest'
+    restart: always
     environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      POSTGRES_DB: k8s-introduction
+      POSTGRES_PASSWORD: db_admin
+      POSTGRES_USER: db_admin
     ports:
-      - '5432'
+      - 5432:5432
