fix build.gradle and contract

--- a/src/main/resources/openapi/k8s-introduction-public.yaml
+++ b/src/main/resources/openapi/k8s-introduction-public.yaml
@@ -3,6 +3,11 @@ info:
   title: k8s-introduction-contract
   description: k8s-introduction-contract
   version: 1.0.0
+tags:
+  - name: users
+    description: Пользователи
+  - name: posts
+    description: Посты
 servers:
   - url: 'http://localhost'
 
@@ -12,8 +17,11 @@ paths:
       - $ref: '#/components/parameters/Limit'
       - $ref: '#/components/parameters/Offset'
     get:
+      tags:
+        - users
       summary: getUsers
       description: Получение всех пользователей с пагинацией
+      operationId: getUsers
       responses:
         200:
           description: OK
@@ -24,16 +32,19 @@ paths:
                 items:
                   $ref: '#/components/schemas/UserResponse'
         400:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
         404:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
         500:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
 
   /users/{userId}:
     parameters:
       - $ref: '#/components/parameters/UserId'
     get:
+      tags:
+        - users
+      operationId: getUser
       summary: getUser
       description: Получение информации о пользователе
       responses:
@@ -44,17 +55,23 @@ paths:
               schema:
                 $ref: '#/components/schemas/UserResponse'
         400:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
         404:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
         500:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
 
   /users/{userId}/posts:
     parameters:
       - $ref: '#/components/parameters/UserId'
+      - $ref: '#/components/parameters/Limit'
+      - $ref: '#/components/parameters/Offset'
     get:
+      tags:
+        - posts
       summary: getUserPosts
+      description: Получение постов пользователя
+      operationId: getUserPosts
       responses:
         200:
           description: OK
@@ -63,16 +80,19 @@ paths:
               schema:
                 $ref: '#/components/schemas/UserPostsResponse'
         400:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
         404:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
         500:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
 
   /posts:
     post:
+      tags:
+        - posts
       summary: createPost
       description: Создание поста
+      operationId: createPost
       requestBody:
         required: true
         content:
@@ -87,17 +107,21 @@ paths:
               schema:
                 $ref: '#/components/schemas/CreatePostResponse'
         400:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
         404:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
         500:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
 
   /posts/{postId}:
     parameters:
       - $ref: '#/components/parameters/PostId'
     get:
+      tags:
+        - posts
       summary: getPost
+      description: Получение поста
+      operationId: getPost
       responses:
         200:
           description: OK
@@ -106,15 +130,21 @@ paths:
               schema:
                 $ref: '#/components/schemas/Post'
         400:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
         404:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
         500:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
 
   /posts/{postId}/like:
+    parameters:
+      - $ref: '#/components/parameters/PostId'
     patch:
+      tags:
+        - posts
       summary: likePost
+      description: Лайкнуть пост
+      operationId: likePost
       responses:
         200:
           description: OK
@@ -123,16 +153,22 @@ paths:
               schema:
                 $ref: '#/components/schemas/Post'
         400:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
         404:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
         500:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
 
 
   /posts/{postId}/dislike:
+    parameters:
+      - $ref: '#/components/parameters/PostId'
     patch:
+      tags:
+        - posts
       summary: dislikePost
+      description: Дизлайкнуть пост
+      operationId: dislikePost
       responses:
         200:
           description: OK
@@ -141,11 +177,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/Post'
         400:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
         404:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
         500:
-          $ref: '#/components/schemas/ErrorResponse'
+          $ref: '#/components/responses/Error'
 
 components:
   schemas:
@@ -263,7 +299,7 @@ components:
           description: Описание ошибки
           type: string
           minLength: 1
-          example: 'Игрок не найден'
+          example: 'Пользователь не найден'
 
   parameters:
     UserId:
